--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/react": "^6.1.20",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "firebase": "^12.7.0",
     "js-cookie": "^3.0.5",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
